--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <version>1.8</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
